perf: 部分说明文档、数据记录逻辑；fix: 误清理直播源、程序崩溃
1. ⚡**优化**：部分说明文档
2. ⚡**优化**：数据记录逻辑
3. 🐛**修复**：误清理使用中的直播源
4. 🐛**修复**：xmltv 源时间异常导致程序崩溃

--- a/epg/assets/html/manage.html
+++ b/epg/assets/html/manage.html
@@ -148,7 +148,8 @@
             示例：tvmao, 频道id, [自定义:]频道id, ...<br>
             示例：cntv[:n], 频道id, [自定义:]频道id, ...<br>
             [] 表示可选（使用时不包含[]）， :n 表示未来 n 天数据，缺省为 1<br>
-            频道指定 EPG 源：设置后，频道数据仅会通过指定源更新
+            频道指定 EPG 源：设置后，频道数据仅通过指定源更新<br>
+            优先级：xml 源越靠前，优先级越高；tvmao 跟 cntv 强制覆盖已有数据
 
             <h3 style="line-height: 0.5;">频道别名</h3>
             格式：数据库频道名 => 频道别名1, 频道别名2, ...<br>
@@ -174,9 +175,8 @@
             清理：删除服务器中未出现在列表中的直播源文件缓存<br>
             停用：停用后不会出现在生成的直播源文件中，包括单个直播源<br>
             保持：直播地址不变时，重新解析保持修改不变<br>
-            模板：生成直播源文件时仅包含模板数据，分组、频道名以模板为准，可选「$精确匹配, 关闭备注」
+            模板：生成直播源文件时仅包含模板数据，分组、频道名以模板为准，可首行添加「$精确匹配, 关闭备注」
             
-
             <h3 style="line-height: 0.5;">其他设置</h3>
             数据保存天数：清理超过设定天数的数据，包括节目单、定时日志、更新日志<br>
             生成 xml 文件：默认生成包含预告数据的 xml 跟 xml.gz 文件，可自行关闭<br>
