feat: 保存所有修改历史；perf: 直播源模糊匹配；fix: default分组异常

--- a/epg/assets/html/manage.html
+++ b/epg/assets/html/manage.html
@@ -173,7 +173,7 @@
             可添加 &latest=1 获取最新文件，不读取缓存<br>
             同步：更新数据时，同步更新直播源数据，默认关闭<br>
             改名：解析直播源数据时，使用数据库信息修正频道名，默认关闭<br>
-            清理：删除服务器中未出现在列表中的直播源文件缓存<br>
+            清理：删除未出现在列表中的直播源文件缓存、未出现在频道列表中的修改记录<br>
             停用：停用后不会出现在生成的直播源文件中，包括单个直播源<br>
             保持：直播地址不变时，重新解析保持修改不变<br>
             模板：生成直播源文件时仅包含模板数据，分组、频道名以模板为准<br>
