--- a/epg/assets/html/manage.html
+++ b/epg/assets/html/manage.html
@@ -169,7 +169,7 @@
             地址前 # 临时停用，后 # 备注并作为分组前缀，快捷键：Ctrl+/<br>
             示例：https://xxx.xx/xx.m3u #前缀1:<br>
             在生成 m3u 文件时，「台标地址」、「tvg-id」、「tvg-name」字段可选<br>
-            转换直播源：<?php echo $serverUrl . '/?token=' . $Config['token']; ?>&live=txt/m3u&url=xxx<br>
+            转换直播源：<?php echo $serverUrl . '/index.php?token=' . $Config['token']; ?>&live=txt/m3u&url=xxx<br>
             可添加 &latest=1 获取最新文件，不读取缓存<br>
             同步：更新数据时，同步更新直播源数据，默认关闭<br>
             改名：解析直播源数据时，使用数据库信息修正频道名，默认关闭<br>
