feat: 支持多个UA；fix: 修改信息后解析异常

--- a/epg/assets/html/manage.html
+++ b/epg/assets/html/manage.html
@@ -186,8 +186,8 @@
             生成 xml 文件：默认生成包含预告数据的 xml 跟 xml.gz 文件，可自行关闭<br>
             数据导入导出：包含 /data/ 文件夹的所有数据<br>
             返回精彩节目：无数据时返回「精彩节目」用于回放，默认关闭<br>
-            Token 范围：点击后可修改，可设置范围，默认「直播源」<br>
-            User-Agent 范围：点击后可修改，可设置范围，默认「无」<br>
+            Token 范围：点击后可修改 Token；可设置范围，默认「直播源」<br>
+            User-Agent 范围：点击后可修改 UA，可用英文逗号分隔；可设置范围，默认「无」<br>
             全转简中：节目单、描述信息转简体中文，默认关闭<br>
             检查版本更新：进入设置界面后检测版本更新（仅提醒），默认打开<br>
             限定频道：可粘贴直播地址进行解析，生成 xml 时包含该部分信息<br>
