feat: 多token、列表另存为、清除测速；perf: 剥离组件；fix: 关闭失效、解析异常
1. ✨新增：支持设置多个 Token
2. ✨新增：直播列表另存为新文件
3. ✨新增：清除测速校验结果
4. ⚡优化：剥离 ffmpeg 组件，使用 `-e ENABLE_FFMPEG=true` 安装
5. 🐛修复：连续弹窗后点击空白区域关闭窗口失效
6. 🐛修复：包含反斜杠的直播源地址解析异常

--- a/epg/assets/html/manage.html
+++ b/epg/assets/html/manage.html
@@ -171,7 +171,7 @@
             示例：https://xxx.xx/xx.m3u #前缀1:<br>
             自定义 UA ： url #备注 #自定义UA（如：url #备注 #OKhttp/1.31）<br>
             在生成 m3u 文件时，「台标地址」、「tvg-id」、「tvg-name」字段可选<br>
-            转换直播源：<?php echo $serverUrl . '/index.php?token=' . $Config['token']; ?>&live=txt/m3u&url=xxx<br>
+            转换直播源：<?php echo $serverUrl . '/index.php?token=' . strtok($Config['token'], ','); ?>&live=txt/m3u&url=xxx<br>
             可添加 &latest=1 获取最新文件，不读取缓存<br>
             同步更新：更新 EPG 数据时，同步更新直播源数据，默认关闭<br>
             频道更名：解析直播源数据时，使用数据库信息修正频道名，默认关闭<br>
@@ -364,15 +364,16 @@
         <br>
         
         <!-- 中间按钮区 -->
-        <div class="button-container" style="width: 80%;">
+        <div class="button-container" style="width: 85%;">
             <input type="file" name="liveSourceFile" id="liveSourceFile" style="display: none;" accept=".m3u, .txt">
             <button id="uploadSourceBtn" onclick="document.getElementById('liveSourceFile').click()">上传源</button>
             <button id="parseSourceInfoBtn" onclick="parseSourceInfo()">解析源</button>
-            <button id="showLiveUrlBtn" onclick="showLiveUrl(`<?php echo $Config['token']; ?>`, `<?php echo $serverUrl; ?>`, `<?php echo $Config['token_range']; ?>`)">访问地址</button>
+            <button id="showLiveUrlBtn" onclick="showLiveUrl(`<?php echo strtok($Config['token'], ','); ?>`, `<?php echo $serverUrl; ?>`, `<?php echo $Config['token_range']; ?>`)">访问地址</button>
             <button id="showLiveTemplateBtn" onclick="showLiveTemplate()">直播源模板</button>
             <button id="showMoreLiveSettingBtn" onclick="showMoreLiveSetting(`<?php echo (isset($Config['live_source_auto_sync']) && $Config['live_source_auto_sync'] == 1 ? '同步更新: 是' : '同步更新: 否'); ?>`, 
                                                         `<?php echo (isset($Config['live_channel_name_process']) && $Config['live_channel_name_process'] == 1 ? '频道更名: 是' : '频道更名: 否'); ?>`)">更多设置</button>
             <button id="saveSourceBtn" onclick="saveLiveSourceInfo()">保存</button>
+            <button id="saveSourceAsBtn" onclick="saveLiveSourceInfoAs()">另存为</button>
         </div>
         <br>
         
